--- a/src/css/tcptimeline_vt.scss
+++ b/src/css/tcptimeline_vt.scss
@@ -59,11 +59,26 @@ h2 {
       padding: 20px;
 
       span {
-        position: absolute;
+        /*  position: absolute;
         top: 42%;
         left: -165px;
         font-size: 2.5rem;
+        transform: translateY(-50%); */
+        font-size: 2.5rem;
         transform: translateY(-50%);
+        top: 45%;
+        left: -47%;
+      }
+      img {
+        width: 50px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        //display: flex;
+        //align-items: center;
+        // justify-content: center;
+        //font-weight: 600;
+        //font-size: 32px;
+        transform: translateX(-140px);
       }
     }
     &__description {
@@ -150,5 +165,9 @@ h2 {
   }
   .timelinevt__event__icon {
     border-radius: 4px 4px 0 0;
+  }
+  .timelinevt__event__icon span {
+    bottom: -89px;
+    left: -45%;
   }
 }
